--- a/src/stylesheet/_fonts.scss
+++ b/src/stylesheet/_fonts.scss
@@ -1,30 +1,30 @@
-@font-face {
-  font-family: Proxima;
-  src: url("../assets/fonts/Proxima/ProximaNova-Light.ttf");
-  font-weight: 300;
-}
-@font-face {
-  font-family: Proxima;
-  src: url("../assets/fonts/Proxima/ProximaNova-Regular.ttf");
-  font-weight: 400;
-}
-@font-face {
-  font-family: Proxima;
-  src: url("../assets/fonts/Proxima/ProximaNova-Semibold.ttf");
-  font-weight: 600;
-}
-@font-face {
-  font-family: Proxima;
-  src: url("../assets/fonts/Proxima/ProximaNova-Bold.ttf");
-  font-weight: 700;
-}
-@font-face {
-  font-family: Roboto;
-  src: url("../assets/fonts/Roboto/Roboto-Regular.ttf");
-  font-weight: 400;
-}
-@font-face {
-  font-family: Roboto;
-  src: url("../assets/fonts/Roboto/Roboto-Bold.ttf");
-  font-weight: 700;
-}
+// @font-face {
+//   font-family: Proxima;
+//   src: url("../assets/fonts/Proxima/ProximaNova-Light.ttf");
+//   font-weight: 300;
+// }
+// @font-face {
+//   font-family: Proxima;
+//   src: url("../assets/fonts/Proxima/ProximaNova-Regular.ttf");
+//   font-weight: 400;
+// }
+// @font-face {
+//   font-family: Proxima;
+//   src: url("../assets/fonts/Proxima/ProximaNova-Semibold.ttf");
+//   font-weight: 600;
+// }
+// @font-face {
+//   font-family: Proxima;
+//   src: url("../assets/fonts/Proxima/ProximaNova-Bold.ttf");
+//   font-weight: 700;
+// }
+// @font-face {
+//   font-family: Roboto;
+//   src: url("../assets/fonts/Roboto/Roboto-Regular.ttf");
+//   font-weight: 400;
+// }
+// @font-face {
+//   font-family: Roboto;
+//   src: url("../assets/fonts/Roboto/Roboto-Bold.ttf");
+//   font-weight: 700;
+// }
