--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -5,24 +5,23 @@
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
-
-  @include mq(s-mobile) {
-    width: 320px;
-  }
+  box-sizing: border-box;
 
   @include mq(mobile) {
+    padding-left: 20px;
+    padding-right: 20px;
     width: 480px;
   }
 
   @include mq(tablet) {
-    padding-left: 40px;
-    padding-right: 40px;
-    width: 768px;
+    padding-left: 50px;
+    padding-right: 50px;
+    width: 860px;
   }
 
   @include mq(desktop) {
     padding-left: 75px;
     padding-right: 75px;
-    width: 1290px;
+    width: 1440px;
   }
 }
