--- a/src/components/Homepage/Homepage.module.scss
+++ b/src/components/Homepage/Homepage.module.scss
@@ -2,3 +2,8 @@
     padding-top: 50px;
     padding-bottom: 63px;
 }
+
+.results {
+    border-bottom: 1px solid #EAEAEA;
+    margin-bottom: 45px;
+}
