add styles to items

--- a/src/components/Homepage/Homepage.module.scss
+++ b/src/components/Homepage/Homepage.module.scss
@@ -6,4 +6,9 @@
 .results {
     border-bottom: 1px solid #EAEAEA;
     margin-bottom: 45px;
+    font-family: 'Montserrat';
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.25;
+    color: #363636;
 }
