--- a/src/components/ItemFrame/ItemFrame.module.scss
+++ b/src/components/ItemFrame/ItemFrame.module.scss
@@ -45,7 +45,7 @@
     width: 350px;
     margin: 0 auto;
 
-    & > p {
+    & > .dateText {
         display: flex;
         align-items: center;
         font-weight: 400;
@@ -54,7 +54,7 @@
         opacity: 0.6;
         margin-bottom: 24px;
     }
-    & > p > svg {
+    & > .dateText > svg {
         width: 16px;
         height: 16px;
         color: #363636;
@@ -82,6 +82,7 @@
         font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
+        padding-bottom: 13px;
         // height: 96px;
     }
     & > .linkToMore{
