--- a/src/components/ItemFrame/ItemFrame.module.scss
+++ b/src/components/ItemFrame/ItemFrame.module.scss
@@ -37,13 +37,12 @@
     color: #363636;
     text-align: start;
     font-family: 'Montserrat';
-    // padding-right: 25px;
-    // padding-left: 25px;
     display: flex;
     flex-direction: column;
-    min-height: 263px;
+    height: 263px;
     overflow: hidden;
     max-width: 100%;
+    margin: 0 auto;
     padding: 0 25px;
 
     & > .dateText {
@@ -70,19 +69,20 @@
     //     overflow: hidden;
     // }
     & .title {
-        flex-grow: 1;
+        // flex-grow: 1;
         font-weight: 400;
         font-size: 24px;
         line-height: 1.21;
-        margin-bottom: 15px;
+        // margin-bottom: 15px;
         // height: 98px;
         // width: 350px;
-        overflow: hidden;
+        // overflow: hidden;
         @include mq(mobile-only){
-        font-weight: 500;
-        font-size: 19px;
+            font-weight: 500;
+            font-size: 19px;
+        }
     }
-    }
+
     & .textList {
         &>li {
             display: inline;
@@ -119,7 +119,7 @@
         &::after {
             content: "";
             // z-index: 10;
-            width: 100%;
+            width: 98%;
             height: 1px;
             background-color: black;
             position: absolute;
@@ -127,6 +127,12 @@
             transform: translateX(-100%);
         }
     }
+}
+
+.animationBox {
+    flex-grow: 1;
+    overflow: hidden;
+    margin-bottom: 15px;
 }
 
 
