--- a/src/stylesheet/_base.scss
+++ b/src/stylesheet/_base.scss
@@ -2,6 +2,10 @@
 @import-normalize;
 /* bring in normalize.css styles */
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: Proxima, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
