--- a/src/Pages/Detailspage/Detailspage.module.scss
+++ b/src/Pages/Detailspage/Detailspage.module.scss
@@ -3,18 +3,17 @@
 .main {
     position: relative;
     box-sizing: border-box;
-
-    padding-top: 150px;
+    padding-top: 180px;
     padding-bottom: 45px;
 }
 
 .back {
     position: absolute;
-    top: 0;
+    top: 50px;
     left: 0;
     z-index: -1;
     width: 100%;
-    height: 245px;
+    height: 296px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
