--- a/src/Pages/Homepage/Homepage.module.scss
+++ b/src/Pages/Homepage/Homepage.module.scss
@@ -1,7 +1,14 @@
 .mainBox {
-    padding-top: 50px;
+    // padding-top: 80px;
     padding-bottom: 63px;
     position: relative;
+}
+
+.title{
+    font-family: RobotoSlab;
+    font-weight: 600;
+    font-size: 30px;
+    padding-top: 70px;
 }
 
 .results {
