--- a/src/components/UpButton/UpButton.module.scss
+++ b/src/components/UpButton/UpButton.module.scss
@@ -17,7 +17,7 @@
     height: 44px;
     border: none;
     border-radius: 50%;
-    background-color: rgba(53, 183, 235, 0.5);
+    background-color: var(--button-color);
     
     transition: opacity 500ms linear;
     opacity: 1;
@@ -30,16 +30,16 @@
     }
     &:hover,
     &:focus {
-        background-color: #fff;
-        box-shadow: 0px 0px 15px rgba(53, 183, 235, 0.5);
+        background-color: var(--button-color-hover);
+        box-shadow: 0px 0px 15px var(--button-color);
     }
     &:hover svg,
     &:focus svg{
-        color: rgba(53, 183, 235);
+        color: var(--header-color);
     }
 
     & svg {
-        color: #fff;
+        color: var(--button-color-hover);
         position: relative;
         left: -1px;
         bottom: -1px;
@@ -47,7 +47,7 @@
 };
 
 .scrollview {
-    height: calc(150vh);
+    height: 180vh;
 }
 
 .observer {
