--- a/src/stylesheet/_base.scss
+++ b/src/stylesheet/_base.scss
@@ -16,6 +16,10 @@ body {
   box-sizing: border-box;
 }
 
+div {
+  box-sizing: border-box;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
