--- a/src/stylesheet/_fonts.scss
+++ b/src/stylesheet/_fonts.scss
@@ -14,3 +14,20 @@
   font-weight: 700;
 }
 
+@font-face {
+  font-family: RobotoSlab;
+  src: url("../assets/fonts/RobotoSlab/RobotoSlab-Light.ttf");
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: RobotoSlab;
+  src: url("../assets/fonts/RobotoSlab/RobotoSlab-Regular.ttf");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: RobotoSlab;
+  src: url("../assets/fonts/RobotoSlab/RobotoSlab-SemiBold.ttf");
+  font-weight: 600;
+}
