--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: space-between;
     padding-left: 20px;
+    padding-right: 20px;
     // border-bottom: 1px solid #000;
     background-color: var(--header-color);
     box-shadow: 0 4px 7px var(--header-shadow);
