--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -1,16 +1,9 @@
-.navigation a{
-    
-}
-
-
-
 .navigation_link {
     color: var(--logo-color);
     font-family: Montserrat;
     font-size: 16px;
     font-weight: 400;
     margin-right: 10px;
-    
 
     &:hover {
         text-decoration: underline;
@@ -19,5 +12,5 @@
 
 .active {
     font-weight: 600;
-    text-decoration: underline;
+    // color: var(--input-color-onfocus);
 };
