add burger wraper

--- a/src/components/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/BurgerMenu/BurgerMenu.module.scss
@@ -44,6 +44,23 @@
     }
 };
 
+.backdrop {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    right: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--burgerMenu-wraper-color);
+    @include mq(tablet) {
+        display: none;
+    }
+}
+
+.hidden {
+    display: none;
+}
+
 .menu {
     position: fixed;
     top: 49px;
