--- a/src/stylesheet/_mixin.scss
+++ b/src/stylesheet/_mixin.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 @mixin retina {
   @media screen and (min-device-pixel-ratio: 2),
     screen and (-moz-min-device-pixel-ratio: 2),
