--- a/src/stylesheet/_variables.scss
+++ b/src/stylesheet/_variables.scss
@@ -7,4 +7,7 @@
     --input-color-onfocus: #1976d2;
     --black-color: #000;
     --burgerMenu-color: rgb(62, 71, 71);
+    --burgerMenu-wraper-color: rgba(77, 71, 71, 0.438);
+    --mobile-width: 400px;
+    --tablet-width: 860px;
 }
