--- a/src/components/ItemFrame/ItemFrame.module.scss
+++ b/src/components/ItemFrame/ItemFrame.module.scss
@@ -5,12 +5,12 @@
     margin-right: 0.2em;
 }
 
-.linkFrame {
-    // &:hover {
-    //     box-shadow: 0px 0px 18px rgba(45, 44, 44, 0.345);
-    //     transform: scale(1.03);
-    // }
-}
+// .linkFrame {
+//     &:hover {
+//         box-shadow: 0px 0px 18px rgba(45, 44, 44, 0.345);
+//         transform: scale(1.03);
+//     }
+// }
 
 .frame {
     box-sizing: border-box;
